--- a/app/src/main/res/layout/loading_progressbar.xml
+++ b/app/src/main/res/layout/loading_progressbar.xml
@@ -12,7 +12,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        android:indeterminateTint="@color/colorPrimaryDark"
+        android:indeterminateTint="@color/heavy_maroon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
