--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.QuestionsActivity">
+    tools:context=".activities.QuestionsActivity"
+    android:background="#F0D6D6">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/questions_toolbar"
