--- a/app/src/main/res/layout/add_category_dialog.xml
+++ b/app/src/main/res/layout/add_category_dialog.xml
@@ -24,6 +24,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imageView" />
 
+    <EditText
+        android:id="@+id/categoryDescEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="@string/category_description"
+        android:textColor="@android:color/black"
+        android:backgroundTint="@color/heavy_pink"
+        android:textCursorDrawable="@null"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/categoryNameEditText" />
+
     <Button
         android:id="@+id/addCategoryButtonDialog"
         android:layout_width="match_parent"
@@ -39,7 +56,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/categoryNameEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/categoryDescEditText" />
 
     <ImageView
         android:id="@+id/imageView"
