--- a/app/src/main/res/layout/edit_category_dialog.xml
+++ b/app/src/main/res/layout/edit_category_dialog.xml
@@ -21,7 +21,24 @@
         android:textCursorDrawable="@null"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/updateImageView" />
+
+    <EditText
+        android:id="@+id/updateCategoryDescEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="@string/category_description"
+        android:textColor="@android:color/black"
+        android:backgroundTint="@color/heavy_pink"
+        android:textCursorDrawable="@null"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/updatecategoryNameEditText" />
 
     <Button
         android:id="@+id/updateCategoryButtonDialog"
@@ -38,5 +55,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/updatecategoryNameEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/updateCategoryDescEditText" />
+
+    <ImageView
+        android:id="@+id/updateImageView"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        app:layout_constraintBottom_toBottomOf="@+id/categoryNameEditText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/category" />
 </androidx.constraintlayout.widget.ConstraintLayout>
